@@ -371,9 +371,11 @@ static void update_settings_ID(SettingsId ID)
 	case ID_Language:
 		read_set_enum<lang::type>(
 			{ LANGNAME_ENGLISH, LANGNAME_DUTCH, LANGNAME_GERMAN, LANGNAME_SPANISH, LANGNAME_FRENCH,
-			  LANGNAME_FRENCH_CANADA, LANGNAME_ROMANIAN, LANGNAME_ITALIAN, LANGNAME_PORTUGUESE, LANGNAME_KOREAN },
+			  LANGNAME_FRENCH_CANADA, LANGNAME_ROMANIAN, LANGNAME_ITALIAN, LANGNAME_PORTUGUESE, LANGNAME_KOREAN,
+			  LANGNAME_GREEK },
 			{ lang::english, lang::dutch, lang::german, lang::spanish, lang::french,
-			  lang::french_canada, lang::romanian, lang::italian, lang::portuguese, lang::korean },
+			  lang::french_canada, lang::romanian, lang::italian, lang::portuguese, lang::korean,
+			  lang::greek },
 			g_settings.language
 		);
 		break;
