@@ -9,6 +9,7 @@ v1.2.0 "aeraria":
  - add Italian translation
  - add Portuguese translation
  - add Korean translation
+ - add Greek translation
  - add searching using a title id
  - add searching using a legacy search query
 
